--- a/client/src/styles/basket_device_item.css
+++ b/client/src/styles/basket_device_item.css
@@ -1,12 +1,3 @@
-.basket_container {
-    margin: 0;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .main {
     max-width: 900px;
     width: 800px;
@@ -41,6 +32,10 @@
     width: 200px;
     display: flex;
     justify-content: space-around;  
+}
+
+select {
+    width: 40px;
 }
 
 .price_info {
